Expose the Travis summary page to the public
git-svn-id: svn+ssh://fridge/svn/pov-admin/fridge/www/zope3.pov.lt@2128 f5f2a0ea-8943-49f3-8d0d-97120da47bfc

--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
   <p><a href="irclogs/">IRC logs of #zope3-dev on FreeNode</a></p>
   <p><a href="trac/">Source repository browser of svn.zope.org</a> (snapshot up to revision 130530)</p>
   <p><a href="py3/">Python 3 porting status page</a> (updated daily)</p>
-  <p><a href="buildbot/"><del>Buildbot for the Zope 3.4 Known Good Set packages</del></a> (no longer online)</p>
+  <p><a href="py3/travis.html">Travis CI summary for ZopeFoundation packages</a></p>
   <!--
+  <p><a href="buildbot/"><del>Buildbot for the Zope 3.4 Known Good Set packages</del></a> (no longer online)</p>
   <table class="buildbot-status">
     <tr>
       <th>&nbsp;</th>
