--- a/py3/travis.html
+++ b/py3/travis.html
@@ -50,7 +50,7 @@
   <script type="text/javascript">
   $(function() {
     // empty strings are for spacing (because I can't figure out how to achieve that effect with CSS)
-    var known_versions = ['', '2.6', '2.7', '', '3.2', '3.3', '3.4', '', 'PyPy', ''];
+    var known_versions = ['', '2.6', '2.7', '', '3.2', '3.3', '3.4', '3.5', '', 'PyPy', ''];
     var filter = null;
     $.each(location.search.slice(1).split(';'), function(idx, arg) {
         arg = arg.split('=')
