--- a/py3/travis.html
+++ b/py3/travis.html
@@ -50,7 +50,7 @@
   <script type="text/javascript">
   $(function() {
     // empty strings are for spacing (because I can't figure out how to achieve that effect with CSS)
-    var known_versions = ['', '2.7', '', '3.4', '3.5', '3.6', '3.7', '', 'PyPy', ''];
+    var known_versions = ['', '2.7', '', '3.5', '3.6', '3.7', '', 'PyPy', ''];
     var filter = null;
     $.each(location.search.slice(1).split(';'), function(idx, arg) {
         arg = arg.split('=')
