--- a/py3/index.html
+++ b/py3/index.html
@@ -291,6 +291,9 @@
   <table id="support-table" class="prefer-svg">
     <tr>
       <td>Loading...</td>
+      <noscript>
+        <td>This page needs JavaScript!</td>
+      </noscript>
     </tr>
   </table>
 
@@ -298,8 +301,7 @@
     <a href="deps.svg" title="See the dependency graph"><img src="deps-thumb.png" alt="Dependency graph"></a>
   </div>
 
-  <p>This page lists all projects from <a href="http://svn.zope.org">svn.zope.org</a>
-    and the new <a href="https://github.com/ZopeFoundation">GitHub
+  <p>This page lists all projects from the <a href="https://github.com/ZopeFoundation">GitHub
     ZopeFoundation organization</a>, and shows the latest version published on
     the <a href="https://pypi.org/">Python Package Index</a> and the
     explicitly declared supported Python versions from trove classifiers for
@@ -309,10 +311,10 @@
     <span id="last-modified"></span></p>
 
   <div class="footer"> 
-    Site maintained by <a href="http://pov.lt/">Programmers of Vilnius</a>.
-    This site uses <a href="http://validator.w3.org/check/referer">valid</a> HTML and CSS.<br /> 
+    Site maintained by <a href="https://pov.lt/">Programmers of Vilnius</a>.
+    This site uses <a href="https://validator.w3.org/check/referer">valid</a> HTML and CSS.<br /> 
     If you experience any problems with the website, please contact <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#119;&#101;&#98;&#109;&#97;&#115;&#116;&#101;&#114;&#64;&#112;&#111;&#118;&#46;&#108;&#116;">&#119;&#101;&#98;&#109;&#97;&#115;&#116;&#101;&#114;&#64;&#112;&#111;&#118;&#46;&#108;&#116;</a>.
-  </div> 
+  </div>
 
 </body>
 </html>
