Can't put <noscript> inside <table>

--- a/py3/index.html
+++ b/py3/index.html
@@ -291,11 +291,12 @@
   <table id="support-table" class="prefer-svg">
     <tr>
       <td>Loading...</td>
-      <noscript>
-        <td>This page needs JavaScript!</td>
-      </noscript>
     </tr>
   </table>
+
+  <noscript>
+    <p>This page needs JavaScript!</p>
+  </noscript>
 
   <div class="sidebar">
     <a href="deps.svg" title="See the dependency graph"><img src="deps-thumb.png" alt="Dependency graph"></a>
