--- a/py3/travis.html
+++ b/py3/travis.html
@@ -182,6 +182,10 @@
     </tr>
   </table>
 
+  <noscript>
+    <p>This page needs JavaScript!</p>
+  </noscript>
+
   <p>This page lists all projects from
     <a href="https://github.com/ZopeFoundation">GitHub
     ZopeFoundation organization</a>, and shows the latest version published on
@@ -193,8 +197,8 @@
     <span id="last-modified"></span></p>
 
   <div class="footer">
-    Site maintained by <a href="http://pov.lt/">Programmers of Vilnius</a>
-    This site uses <a href="http://validator.w3.org/check/referer">valid</a> HTML and CSS.<br />
+    Site maintained by <a href="https://pov.lt/">Programmers of Vilnius</a>
+    This site uses <a href="https://validator.w3.org/check/referer">valid</a> HTML and CSS.<br />
     If you experience any problems with the website, please contact <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#119;&#101;&#98;&#109;&#97;&#115;&#116;&#101;&#114;&#64;&#112;&#111;&#118;&#46;&#108;&#116;">&#119;&#101;&#98;&#109;&#97;&#115;&#116;&#101;&#114;&#64;&#112;&#111;&#118;&#46;&#108;&#116;</a>
   </div>
 
