Refresh links in the hidden buildbot page

--- a/buildbot/index.html
+++ b/buildbot/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Zope 3.4 KGS buildbot has been shut down</title>
@@ -10,17 +10,17 @@
 
   <p>Nobody uses Zope 3.4 any more.</p>
 
-  <p>If you do, please upgrade to <a href="http://bluebream.zope.org/"
+  <p>If you do, please upgrade to <a href="https://bluebream.zope.org/"
   >Bluebream</a> (which is a rebranded direct continuation of the Zope 3 idea),
-   or use the <a href="http://docs.zope.org/zopetoolkit/">Zope Toolkit</a>
+   or use the <a href="https://docs.zope.org/zopetoolkit/">Zope Toolkit</a>
    (which is a direct continuation of the inner core of Zope 3), or switch to a
-   different framework like <a href="http://www.pylonsproject.org/">Pyramid</a>
+   different framework like <a href="https://www.pylonsproject.org/">Pyramid</a>
    (which was inspired by a lot of Zope 3 technology, but doesn't have the
    sharp edges and actually has good documentation).</p>
 
   <div class="footer"> 
-    Site maintained by <a href="http://pov.lt/">Programmers of Vilnius</a>.
-    This site uses <a href="http://validator.w3.org/check/referer">valid</a> HTML and CSS.<br /> 
+    Site maintained by <a href="https://pov.lt/">Programmers of Vilnius</a>.
+    This site uses <a href="https://validator.w3.org/check/referer">valid</a> HTML and CSS.<br /> 
     If you experience any problems with the website, please contact <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#119;&#101;&#98;&#109;&#97;&#115;&#116;&#101;&#114;&#64;&#112;&#111;&#118;&#46;&#108;&#116;">&#119;&#101;&#98;&#109;&#97;&#115;&#116;&#101;&#114;&#64;&#112;&#111;&#118;&#46;&#108;&#116;</a>.
   </div>
 </body>
