Fix HTML checker warnings
* Warning: Consider adding a lang attribute to the html start tag to declare the language of this document.

* Warning: The type attribute for the style element is not needed and should be omitted.

* Warning: The type attribute is unnecessary for JavaScript resources.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>Zope 3 related odds and ends</title>
   <link rel="stylesheet" href="style.css" />
-  <style type="text/css">
+  <style>
     th, td { padding: 1ex; }
     td.success {
       background: #8FDF5F;
