--- a/py3/index.html
+++ b/py3/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>zope.* on Python 3</title>
   <link rel="stylesheet" href="/style.css" />
-  <style type="text/css">
+  <style>
     #image-format-choice { position: absolute; top: 2em; right: 2em; }
 
     #support-table     { margin-left: -6em; }
@@ -70,8 +70,8 @@
       margin-left: 2em;
     }
   </style>
-  <script type="text/javascript" src="/jquery/jquery.min.js"></script>
-  <script type="text/javascript">
+  <script src="/jquery/jquery.min.js"></script>
+  <script>
   $(function() {
     $("#use-png").click(function(e) {
         e.preventDefault();
