Add a page with GHA badges for everything
Closes #1 maybe.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <p><a href="trac/">Source repository browser of svn.zope.org</a> (snapshot up to revision 130530)</p>
   <p><a href="py3/">Python 3 porting status page</a> (updated daily)</p>
   <p><a href="py3/travis.html">Travis CI summary for ZopeFoundation packages</a></p>
+  <p><a href="py3/gha.html">GitHub Actions summary for ZopeFoundation packages</a></p>
 
   <div class="footer"> 
     Site maintained by <a href="https://pov.lt/">Programmers of Vilnius</a>.
