--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
   <p><a href="irclogs-zope/">IRC logs of #zope on FreeNode</a></p>
   <p><a href="irclogs-zodb/">IRC logs of #zodb on FreeNode</a></p>
   <p><a href="irclogs/">IRC logs of #zope3-dev on FreeNode</a></p>
+  <!-- Ubuntu 20.04 LTS dropped trac from the repos
   <p><a href="trac/">Source repository browser of svn.zope.org</a> (snapshot up to revision 130530)</p>
+    -->
   <p><a href="py3/">Python 3 porting status page</a> (updated daily)</p>
+  <!-- pointless: we no longer use Travis CI
   <p><a href="py3/travis.html">Travis CI summary for ZopeFoundation packages</a></p>
+    -->
   <p><a href="py3/gha.html">GitHub Actions summary for ZopeFoundation packages</a></p>
 
   <div class="footer"> 
