Update to the latest jQuery
I haven't tested if things work, lol.  We'll see it in production.

--- a/py3/gha.html
+++ b/py3/gha.html
@@ -46,7 +46,7 @@
       margin-left: 2em;
     }
   </style>
-  <script src="/jquery/jquery.min.js"></script>
+  <script src="/jquery/jquery-3.7.1.min.js"></script>
   <script>
   $(function() {
     // empty strings are for spacing (because I can't figure out how to achieve that effect with CSS)
