--- a/py3/index.html
+++ b/py3/index.html
@@ -70,7 +70,7 @@
       margin-left: 2em;
     }
   </style>
-  <script src="/jquery/jquery.min.js"></script>
+  <script src="/jquery/jquery-3.7.1.min.js"></script>
   <script>
   $(function() {
     $("#use-png").click(function(e) {
