--- a/py3/travis.html
+++ b/py3/travis.html
@@ -46,7 +46,7 @@
       margin-left: 2em;
     }
   </style>
-  <script src="/jquery/jquery.min.js"></script>
+  <script src="/jquery/jquery-3.7.1.min.js"></script>
   <script>
   $(function() {
     // empty strings are for spacing (because I can't figure out how to achieve that effect with CSS)
